--- a/resources/css/common.css
+++ b/resources/css/common.css
@@ -9,6 +9,7 @@ input#search {
 	border: 0;
     outline: none;
 	font-weight: 500;
+    max-width: 100%;
 }
 
 input#search::-webkit-input-placeholder {
