--- a/resources/css/list-desktop.css
+++ b/resources/css/list-desktop.css
@@ -145,6 +145,7 @@ input#search.places-search {
 	font-weight: 700;
 	display: inline-block;
 	width: 100px;
+    min-width: 100px;
 }
 
 .search-separator {
