--- a/resources/styles/list-mobile.css
+++ b/resources/styles/list-mobile.css
@@ -163,7 +163,7 @@ input#search.places-search {
 	text-indent: 0;
 }
 
-.search-separator {
+#search-separator {
 	display: inline-block;
 	color: #BEC2C9;
 	font-weight: 400;
@@ -171,7 +171,7 @@ input#search.places-search {
 	text-align: center;
 }
 
-.search-separator.has-search-query {
+#search-separator.has-search-query {
 	color: #000;
 	font-weight: 700;
 }
