--- a/resources/styles/list-mobile.css
+++ b/resources/styles/list-mobile.css
@@ -13,17 +13,17 @@ body {
 }
 
 #container {
-	width: 375px;
+	width: 100%;
 	position: relative;
 }
 
 #navigation {
 	position: absolute;
 	top: 0;
+	width: 100%;
 }
 
 #header-image {
-	max-width: 375px;
 	position: relative;
 	height: 230px;
 	background-color: #F2F2F2;
@@ -36,7 +36,7 @@ body {
 }
 
 #header-image img {
-	width: 375px;
+	width: 100%;
 }
 
 #list {
@@ -90,7 +90,7 @@ h1 a {
     overflow-y: hidden;
     overflow-x: scroll;
     position: relative;
-    width: 375px;
+    width: 100%;
 	height: 50px;
 }
 
@@ -148,7 +148,7 @@ a.index-show-more {
     overflow-y: hidden;
     overflow-x: scroll;
     position: relative;
-    width: 375px;
+    width: 100%;
 	height: 50px;
 }
 
