--- a/resources/styles/list-desktop.css
+++ b/resources/styles/list-desktop.css
@@ -174,6 +174,7 @@ input#search.places-search {
 .subcategory-header {
 	display: inline-block;
 	margin-bottom: 20px;
+	letter-spacing: 1px;
 }
 
 .subcategory-header a {
@@ -182,7 +183,6 @@ input#search.places-search {
 	color: #BEC2C9;
 	text-transform: uppercase;
 }
-
 
 .place {
 	display: inline-block;
