--- a/v2/frontend/experiments/experiments-style.less
+++ b/v2/frontend/experiments/experiments-style.less
@@ -28,5 +28,26 @@ body {
 
 h1 {
     font: bold 28px 'Helvetica Neue';
+    margin: 0 0 20px 0;
+}
+
+h2 {
+    font: 18px 'Helvetica Neue';
+    color: rgba(0, 0, 0, 0.3);
     margin: 0 0 30px 0;
+}
+
+#credit {
+    margin-top: 50px;
+    color: rgba(0, 0, 0, 0.3);
+    font: 14px 'Helvetica Neue';
+    display: none;
+}
+
+#credit a {
+    color: rgba(0, 0, 0, 0.3);
+}
+
+#credit a:hover {
+    text-decoration: none;
 }
