--- a/v2/frontend/experiments/experiments-style.less
+++ b/v2/frontend/experiments/experiments-style.less
@@ -26,6 +26,10 @@ body {
     margin: 50px;
 }   
 
+#description {
+    display: none;
+}
+
 h1 {
     font: bold 28px 'Helvetica Neue';
     margin: 0 0 20px 0;
