--- a/v2/frontend/experiments/index.less
+++ b/v2/frontend/experiments/index.less
@@ -61,7 +61,7 @@ ul {
             }
         }
 
-        .date-graph {
+        .date_graph {
             margin-bottom: 20px;
 
             .axis path,
